--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skillmageddon-backend",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "A Strapi application for hack",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
