--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.5.0",
     "@strapi/plugin-users-permissions": "4.5.0",
+    "@strapi/plugin-documentation": "4.5.0",
     "@strapi/strapi": "4.5.0",
     "better-sqlite3": "7.4.6",
     "pg": "^8.8.0",
