--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "version": "0.1.0",
   "description": "A Strapi application for hack",
   "scripts": {
+    "postinstall": "patch-package",
     "develop": "strapi develop",
     "start": "npm run develop",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
+    "@strapi/plugin-documentation": "4.5.0",
     "@strapi/plugin-i18n": "4.5.0",
     "@strapi/plugin-users-permissions": "4.5.0",
-    "@strapi/plugin-documentation": "4.5.0",
     "@strapi/strapi": "4.5.0",
     "better-sqlite3": "7.4.6",
+    "lodash": "^4.17.21",
+    "node-html-parser": "^6.1.1",
+    "patch-package": "^6.5.0",
     "pg": "^8.8.0",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "rimraf": "^3.0.2",
+    "website-scraper": "^4.2.3"
   },
   "author": {
     "name": "A Strapi developer"
