--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
     "rimraf": "^3.0.2",
+    "sharp": "^0.31.2",
     "website-scraper": "^4.2.3"
   },
   "author": {
