--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg-connection-string": "^2.5.0",
     "rimraf": "^3.0.2",
     "sharp": "^0.31.2",
+    "strapi-plugin-populate-deep": "^1.1.2",
     "website-scraper": "^4.2.3"
   },
   "author": {
